--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 	<title>Document</title>
 </head>
 <body>
+	<button type="button" class="btn">Fetch users</button>
+	<ul class="user-list"></ul>
+
 	<script type="module" src="./xhr.js"></script>
 	<script type="module" src="./fetch.js"></script>
+	<script type="module" src="./fetch2.js"></script>
 </body>
 </html>
